feat(config-api): asset mgt endpoint
Signed-off-by: pujavs <pujas.works@gmail.com>